rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: FIN
    - headers:
        end-user:
          exact: USA
    - headers:
        end-user:
          exact: CAN
    - headers:
        end-user:
          exact: ESP
    - headers:
        end-user:
          exact: URY
    - headers:
        end-user:
          exact: ARG
    route:
      - destination:
          host: reviews
          subset: v1 
  - match:
    - headers:
        end-user:
          exact: MDG
    - headers:
        end-user:
          exact: ETH
    - headers:
        end-user:
          exact: IND
    - headers:
        end-user:
          exact: SEN
    - headers:
        end-user:
          exact: LAO
    - headers:
        end-user:
          exact: GHA
    route:
    - destination:
        host: reviews
        subset: v2
  - match:
    - headers:
        end-user:
          exact: BRA
    - headers:
        end-user:
          exact: MEX
    - headers:
        end-user:
          exact: RUS
    - headers:
        end-user:
          exact: ECU
    - headers:
        end-user:
          exact: ZAF
    - headers:
        end-user:
          exact: IRQ
    route:
    - destination:
        host: reviews
        subset: v3
